get rid of profiles in standalone; cleanup HostInfo changing baseURL to baseDir since we always assume it to be file based as it is only written to